front24-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front24-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aziznour.com # Remplacez par votre nom de domaine
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front5-deployment
            port:
              number: 80
